Authentication and Authorization in Node

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URL = "mongodb+srv://dummyuser123:dummyuser123@cluster0.whvpz7m.mongodb.net/?retryWrites=true&w=majority"
+JWT_SECRET ="somesuperhardstringtoguess"
 PORT = 3001
