--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -8,7 +8,7 @@
     "gridfs-stream": "^1.1.1",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoos": "^0.0.1-security",
+    "mongoose": "^6.9.0",
     "morgan": "^1.10.0",
     "multer": "^1.3.0",
     "multer-gridfs-storage": "^1.3.0"
@@ -17,9 +17,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
