--- a/netlify.toml
+++ b/netlify.toml
@@ -18,4 +18,10 @@
   BASE_URL = "https://api.example.com"
 
 [[plugins]]
-  package = "netlify/plugin-name"
+  package = "netlify/plugin-env"
+
+[[plugins]]
+  package = "netlify/plugin-inline-source"
+
+[[plugins]]
+  package = "netlify/plugin-gzip"
